$Id$

History for IMDBPHP2
====================

v2.0.1
-------------------
* imdb::awards() updated with code from its author (tnx, Qvist!)
* imdb::alsoknow() updated with patch from Qvist (tnx again!)
! imdb::tagline() and imdb::prodNotes() have been affected by some site changes
! fixing some minor typos
! imdb site changes broke imdb::releaseInfo() again

v2.0.0 (26.04.2010)
-------------------
! imdb::releaseInfo() was also partly affected by the last IMDB site changes
! another IMDB site change broke imdb::alsoknow()
+ imdb::top250() added as provided by abe (tnx!)
* due to a request, the constant mdbconfig::pilot_imdbfill was turned into a
  protected property (to be accessed via mdb_config::get_pilot_imdbfill and
  mdb_config::set_imdbfill). To enable the use of this, the new constant
  mdb_config::pilot_imdbfallback_enabled needs to be set to TRUE
+ pilotsearch now honors the maxresults setting
! imdb::quotes() had some annoying "share this quote" added due to IMDB site changes
+ added imdb::videosites() to retrieve the external trailer links again
! fixed the imdb_trailer class again (at least basically)
+ pilot::trailers() and pilot::mainPictures() now deliver content from MoviePilot
+ imdb::trailers() now also supports the "extended data" introduced by pilot::trailers():
  Passing TRUE as parameter, instead of simply the URLs you get some additional data
+ imdb_trailers: added support for Youtube URLs
+ imdb::awards() has been added by Qvist (Tnx!) and tweaked by Izzy - the latter
  then also added pilot::awards() as wrapper to it (requires FULL_ACCESS)
* replaced mdb_config::pilot_imdbfallback_enabled by the global constant
  PILOT_IMDBFILL - which is defined in the default mdb_config.class.php only
  if it was not defined before
! IMDB changed the format of the AKAs today - so imdb::alsoknow() had to be fixed
! imdb::trivia() was broken due to site changes
! Makefile forgot to install index.html - and to uninstall pilot_person.class.php